[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Shaders/Foliage_Shader_2.shader" type="Shader" id=1]
[ext_resource path="res://Scenes/Entities/Objects/Foliage/Tree/Tree.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/Noise/Wind.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Objects/Foliage/Trees/Normal_Trees/Tree_1/Grown/Tree_Trunk.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Objects/Foliage/Trees/Normal_Trees/Tree_1/Grown/Leaves_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/Particles/Leaves/Leaves.png" type="Texture" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/intensity = 100.0
shader_param/speed = 1.0
shader_param/global_position = null
shader_param/impulse = Vector2( 0, 0 )
shader_param/NOISE_PATTERN = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/intensity = 6.0
shader_param/speed = 1.0
shader_param/global_position = null
shader_param/impulse = Vector2( 0, 0 )
shader_param/NOISE_PATTERN = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 20 )

[sub_resource type="CircleShape2D" id=4]
radius = 27.0

[sub_resource type="Curve" id=5]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 10.6364 ), 0.0, 0.0, 0, 0, Vector2( 1, 193.909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.727848, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( -35, 15, 0 )
initial_velocity = -5.0
initial_velocity_random = 0.05
angular_velocity = 222.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -18.39
radial_accel_random = 0.54
angle_random = 1.0
angle_curve = SubResource( 6 )
scale_curve = SubResource( 8 )
hue_variation_random = 0.2

[node name="Tree" type="Node2D"]
position = Vector2( -24, 36 )
z_index = -2
z_as_relative = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Trunk" type="Sprite" parent="."]
material = SubResource( 1 )
use_parent_material = true
texture = ExtResource( 4 )
hframes = 6

[node name="Leaves" type="Sprite" parent="Trunk"]
material = SubResource( 2 )
position = Vector2( 0, -8 )
texture = ExtResource( 5 )
hframes = 2
frame = 1

[node name="Trunk_Collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trunk_Collider"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="Leaves_Collider" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 29

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leaves_Collider"]
position = Vector2( 0, -5 )
shape = SubResource( 4 )

[node name="Leaves_Particle" type="Particles2D" parent="."]
z_index = 4
z_as_relative = false
amount = 4
lifetime = 5.0
randomness = 0.5
process_material = SubResource( 9 )
texture = ExtResource( 6 )
[connection signal="area_entered" from="Leaves_Collider" to="." method="_on_Leaves_Collider_area_entered"]
[connection signal="area_exited" from="Leaves_Collider" to="." method="_on_Leaves_Collider_area_exited"]
[connection signal="body_entered" from="Leaves_Collider" to="." method="_on_Leaves_Collider_body_entered"]
[connection signal="body_exited" from="Leaves_Collider" to="." method="_on_Leaves_Collider_body_exited"]
